[package]
name = "libbcsv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.11.2"
cxx = { version = "1.0.105", optional = true }

[features]
c_exports = []
cxx = ["cxx-build", "dep:cxx"]

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cxx-build = { version = "1.0.105", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"