[package]
name = "libbcsv"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.11.2"
csv = "1.3.0"
cxx = { version = "1.0.105", optional = true }
encoding_rs = "0.8.33"
xlsxwriter = "0.6.0"

[features]
c_exports = []
cxx = ["cxx-build", "dep:cxx"]

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cxx-build = { version = "1.0.105", optional = true }
