[package]
name = "libbcsv"
version = "0.5.0"
edition = "2021"
authors = ["Lord-Giganticus", "The Members of Lord-G-INC"]
homepage = "https://lordg.org/"
license-file = "LICENSE"
description = "A library to parse the BCSV file format."
repository = "https://github.com/Lord-G-INC/libbcsv"
readme = "README.md"
categories = ["game-development", "parsing", "encoding", "filesystem"]
keywords = ["BCSV", "bcsv", "JMapInfo", "pa", "tbl"]
include = [
    "**/*.rs",
    "Cargo.toml",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.11.2"
cxx = { version = "1.0.105", optional = true }
encoding_rs = "0.8.33"
xlsxwriter = "0.6.0"

[features]
c_exports = []
cxx = ["cxx-build", "dep:cxx"]

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cxx-build = { version = "1.0.105", optional = true }

[package.metadata.docs.rs]
all-features = true